--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
   "bugs": {
     "url": "https://github.com/probe-dock/grunt-raml2boot/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/probe-dock/grunt-raml2boot/blob/master/LICENSE.txt"
-    }
-  ],
+  "license": "MIT",
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -33,5 +28,10 @@
   },
   "keywords": [
     "gruntplugin"
-  ]
+  ],
+  "dependencies": {
+    "bluebird": "^2.9.25",
+    "raml2boot": "^0.1.1",
+    "underscore": "^1.8.3"
+  }
 }
